projects/platform/cloudflare/ingress/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: { { .Values.gatewayClass.name } }
  labels: { { - include "cloudflare-ingress.labels" . | nindent 4 } }
spec:
  controllerName: { { .Values.gatewayClass.controllerName } }
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: { { .Values.envoyProxy.name } }
    namespace: { { .Values.envoyProxy.namespace } }
