projects/platform/cloudflare/ingress/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Values.service.name } }
  namespace: { { .Values.service.namespace } }
  labels: { { - include "cloudflare-ingress.labels" . | nindent 4 } }
spec:
  type: ClusterIP
  ports:
    - port: { { .Values.service.port } }
      targetPort: { { add .Values.gateway.listener.port 10000 } }
      protocol: TCP
      name: http
  selector:
    gateway.envoyproxy.io/owning-gateway-name: { { .Values.gateway.name } }
    gateway.envoyproxy.io/owning-gateway-namespace:
      { { .Values.gateway.namespace } }
